# incident-diagnostic-harness

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
data/mock/: incidents.json  logs.json  metrics.json  topology.json
docs/: agent-design.md  agent-design.zh.md
examples/: payment_timeout.md  redis_session_timeout.md  token_expired.md
prompts/: report_system_v1.md  report_user_v1.md  supervisor_system_v1.md  supervisor_user_v1.md
scripts/: list_runs.py  run_benchmark.py
src/agents/: graph_builder.py
src/api/: __init__.py  main.py  schemas.py
src/cli/: main.py
src/context/: strategy.py
src/core/: config.py  contracts.py  messages.py  model_factory.py  paths.py  runner.py  state.py
src/prompts/: loader.py
src/reporting/: generator.py
src/telemetry/: recorder.py
src/tools/: json_store.py  logs.py  memory.py  metrics.py  text_match.py  topology.py
tests/: test_api.py  test_control_plane.py
